---------------------------------- 2026-01-13 00:05:54 26.1.13
no qc pass: egress label filtering with pvrp
failed: egress label filtering with pvrp
---------------------------------- 2026-01-13 00:36:11 26.1.13
no failed: egress label filtering with pvrp
qc pass: egress label filtering with pvrp
---------------------------------- 2026-01-17 10:16:51 26.1.17
qc pass: ttl set in
qc pass: ttl set out
---------------------------------- 2026-01-17 13:49:57 26.1.17
qc pass: p4lang: ttl set
qc pass: p4lang: vlan ttl set
---------------------------------- 2026-01-18 11:57:02 26.1.18
no qc pass: p4lang: vlan ttl set
no qc pass: p4lang: ttl set
no qc pass: p4lang: vlan bridge tcpmss
no qc pass: p4lang: bridge tcpmss
no qc pass: p4lang: vlan tcpmss
no qc pass: p4lang: tcpmss
qc pass: p4lang: tcpmss in
qc pass: p4lang: vlan tcpmss in
qc pass: p4lang: bridge tcpmss in
qc pass: p4lang: vlan bridge tcpmss in
qc pass: p4lang: ttlset in
qc pass: p4lang: vlan ttlset in
---------------------------------- 2026-01-18 12:29:52 26.1.18
no qc pass: p4lang: qinq bridge tcpmss
no qc pass: p4lang: qinq tcpmss
qc pass: p4lang: qinq tcpmss in
qc pass: p4lang: qinq bridge tcpmss in
qc pass: p4lang: tcpmss out
qc pass: p4lang: vlan tcpmss out
qc pass: p4lang: ttlset out
qc pass: p4lang: vlan ttlset out
qc pass: p4lang: qinq ttlset in
qc pass: p4lang: qinq ttlset out
---------------------------------- 2026-01-19 19:54:09 26.1.19
no qc pass: ibgp rr vpns prefix movement
failed: ibgp rr vpns prefix movement
---------------------------------- 2026-01-19 21:49:47 26.1.19
no failed: ibgp rr vpns prefix movement
qc pass: ibgp rr vpns prefix movement
---------------------------------- 2026-01-22 10:42:29 26.1.22
qc pass: unicast+mup over bgp
qc pass: unicast+mup over bgp with soft-reconfig
qc pass: unicast+mup over bgp with additional path
qc pass: unicast+omup over bgp
qc pass: unicast+omup over bgp with soft-reconfig
qc pass: unicast+omup over bgp with additional path