@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.28-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-28 08:02:04, took 00:32:15, with 50 workers, on 4224 cases, 0 failed, 0 traces, 7 retries<br/>
+tested: 2026-01-28 08:33:59, took 00:17:07, with 50 workers, on 4226 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -974,16 +974,18 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat07.tst">crypt-nat07.tst</a></td><td>success</td><td>target address translation to address</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat08.tst">crypt-nat08.tst</a></td><td>success</td><td>more sources translation to interface</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-nat09.tst">crypt-nat09.tst</a></td><td>success</td><td>ipv4-ipv6 protocol translation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat10.tst">crypt-nat10.tst</a></td><td>success</td><td>source prefix translation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat11.tst">crypt-nat11.tst</a></td><td>success</td><td>target prefix translation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat12.tst">crypt-nat12.tst</a></td><td>success</td><td>nat64 translation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat13.tst">crypt-nat13.tst</a></td><td>success</td><td>source port randomization</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat14.tst">crypt-nat14.tst</a></td><td>success</td><td>source interface translation to address</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat15.tst">crypt-nat15.tst</a></td><td>success</td><td>target interface translation to address</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat16.tst">crypt-nat16.tst</a></td><td>success</td><td>ipv4 target port selection</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat17.tst">crypt-nat17.tst</a></td><td>success</td><td>ipv6 target port selection</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat18.tst">crypt-nat18.tst</a></td><td>success</td><td>ipv4-ipv6 unicast translation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat19.tst">crypt-nat19.tst</a></td><td>success</td><td>ipv4-ipv6 multicast translation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat10.tst">crypt-nat10.tst</a></td><td>success</td><td>source prefix translation to address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat11.tst">crypt-nat11.tst</a></td><td>success</td><td>target prefix translation to address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat12.tst">crypt-nat12.tst</a></td><td>success</td><td>source prefix translation to interface</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat13.tst">crypt-nat13.tst</a></td><td>success</td><td>target prefix translation to interface</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat14.tst">crypt-nat14.tst</a></td><td>success</td><td>nat64 translation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat15.tst">crypt-nat15.tst</a></td><td>success</td><td>source port randomization</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat16.tst">crypt-nat16.tst</a></td><td>success</td><td>source interface translation to address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat17.tst">crypt-nat17.tst</a></td><td>success</td><td>target interface translation to address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat18.tst">crypt-nat18.tst</a></td><td>success</td><td>ipv4 target port selection</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat19.tst">crypt-nat19.tst</a></td><td>success</td><td>ipv6 target port selection</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat20.tst">crypt-nat20.tst</a></td><td>success</td><td>ipv4-ipv6 unicast translation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-nat21.tst">crypt-nat21.tst</a></td><td>success</td><td>ipv4-ipv6 multicast translation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-openvpn01.tst">crypt-openvpn01.tst</a></td><td>success</td><td>openvpn over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-openvpn02.tst">crypt-openvpn02.tst</a></td><td>success</td><td>openvpn over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-openvpn03.tst">crypt-openvpn03.tst</a></td><td>success</td><td>openvpn over openvpn</td></tr>
