@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.28-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-28 08:13:41, took 00:11:08, with 50 workers, on 865 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2026-01-28 08:46:18, took 00:11:49, with 50 workers, on 865 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
