@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.28-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-28 08:13:41, took 00:11:08, with 50 workers, on 865 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2026-01-28 08:46:18, took 00:11:49, with 50 workers, on 865 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
